playing-cards-generator - rebuild all logic:   - started recreating the game:     - added proper css (using only flexbox for this one)     - added functionality for number of decks generator and number of cards draw     - wrapped all functionality in a single event, to prevent using multiple ajax object creations and hanlders     - rethinking of html structure     - updated README.md files

--- a/playing-cards-generator/index.css
+++ b/playing-cards-generator/index.css
@@ -1,12 +1,45 @@
-button {
-    margin: 5px;
+h1 {
+    text-align: center;
 }
 
-ul {
-    list-style: none;
+/* inputs container area */
+#inputs-container {
+    width: 100%;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
 }
 
-img {
-    width: 50px;
-    height: 70px;
+#generate-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+#button-area {
+    display: flex;
+    justify-content: space-between;
+}
+
+#button-area button {
+    width: 45%;
+}
+
+label {
+    display: block;
+}
+
+input[type="number"] {
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+
+/* cards-table area */
+#cards-table {
+    display: flex;
+}
+
+#cards-table div {
+    flex-wrap: wrap;
 }
